--- a/opencorpora/src/main/res/layout/opencorpora_layout.xml
+++ b/opencorpora/src/main/res/layout/opencorpora_layout.xml
@@ -2,11 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView
-    android:id="@+id/text_view"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    />
+    android:layout_height="fill_parent">
+
+    <TextView
+        android:id="@+id/text_view"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Try to get token"
+        android:onClick="OnClick"/>
 </LinearLayout>
