--- a/opencorpora/src/main/res/layout/opencorpora_layout.xml
+++ b/opencorpora/src/main/res/layout/opencorpora_layout.xml
@@ -12,6 +12,6 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Try to get token"
+        android:text="@string/MainButtonText"
         android:onClick="OnClick"/>
 </LinearLayout>
