fix lint warnings

--- a/opencorpora/src/main/res/layout/opencorpora_layout.xml
+++ b/opencorpora/src/main/res/layout/opencorpora_layout.xml
@@ -18,6 +18,5 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/AddAccountButtonText"
-        android:onClick=""/>
+        android:text="@string/AddAccountButtonText"/>
 </LinearLayout>
