--- a/opencorpora/src/main/res/layout/opencorpora_layout.xml
+++ b/opencorpora/src/main/res/layout/opencorpora_layout.xml
@@ -20,4 +20,10 @@
         android:layout_height="wrap_content"
         android:text="@string/count_button_text"
         android:onClick="tryAuth"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/load_types_button_text"
+        android:onClick="loadTypes"/>
 </LinearLayout>
