--- a/opencorpora/src/main/res/layout/opencorpora_layout.xml
+++ b/opencorpora/src/main/res/layout/opencorpora_layout.xml
@@ -18,6 +18,6 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/count_button_text"
-        android:onClick="tryAuth"/>
+        android:text="@string/open_types_activity"
+        android:onClick="openActivity"/>
 </LinearLayout>
