--- a/opencorpora/src/main/res/layout/activity_tasks.xml
+++ b/opencorpora/src/main/res/layout/activity_tasks.xml
@@ -7,4 +7,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.opencorpora.TasksActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/previous_task_button"
+        android:id="@+id/prev_button"
+        android:layout_gravity="bottom" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/next_task_button"
+        android:id="@+id/next_button"
+        android:layout_gravity="bottom" />
 </LinearLayout>
